SDGF-221: Breaking dependency between test methods (#93)
(cherry picked from commit 0303008858f8d3d48a4f38d69d6a5f119f31cace)